# multiarch-azure-iot-c

./: Dockerfile.arm64  Dockerfile.armhf  Dockerfile.x86_64  README.md  build.sh
sample/: CMakeLists.txt  cloud2device.c  cloud2device.h  device2cloud.c  device2cloud.h  devicetwin.c  devicetwin.h  directmethod.c  directmethod.h  sample.c  sample.h  shared.c  shared.h  utils.c  utils.h
